# Human_Behavior_Understanding

human_behavior_understanding/: Accuracy.ods  CMakeLists.txt  package.xml
human_behavior_understanding/dataout/: HJPD_b05  HJPD_b05.model  HJPD_b05.scale  HJPD_b05.scale.model  HJPD_b05.t  HJPD_b05.t.predict  HJPD_b05.t.predict.accuray  HJPD_b05.t.scale  HJPD_b05.t.scale.predict  HJPD_b05.t.scale.predict.accuray  HJPD_b06  HJPD_b06.model  HJPD_b06.scale  HJPD_b06.scale.model  HJPD_b06.t  HJPD_b06.t.predict  HJPD_b06.t.predict.accuray  HJPD_b06.t.scale  HJPD_b06.t.scale.predict  HJPD_b06.t.scale.predict.accuray  HJPD_b07  HJPD_b07.model  HJPD_b07.scale  HJPD_b07.scale.model  HJPD_b07.t  HJPD_b07.t.predict  HJPD_b07.t.predict.accuray  HJPD_b07.t.scale  HJPD_b07.t.scale.predict  HJPD_b07.t.scale.predict.accuray  HJPD_b08  HJPD_b08.model  HJPD_b08.scale  HJPD_b08.scale.model  HJPD_b08.t  HJPD_b08.t.predict  HJPD_b08.t.predict.accuray  HJPD_b08.t.scale  HJPD_b09  HJPD_b09.model  (+357 more)
human_behavior_understanding/dataset/test/: a08_s07_e01_skeleton_proj.txt  a08_s07_e02_skeleton_proj.txt  a08_s08_e01_skeleton_proj.txt  a08_s08_e02_skeleton_proj.txt  a08_s09_e01_skeleton_proj.txt  a08_s09_e02_skeleton_proj.txt  a08_s10_e01_skeleton_proj.txt  a08_s10_e02_skeleton_proj.txt  a10_s07_e01_skeleton_proj.txt  a10_s07_e02_skeleton_proj.txt  a10_s08_e01_skeleton_proj.txt  a10_s08_e02_skeleton_proj.txt  a10_s09_e01_skeleton_proj.txt  a10_s09_e02_skeleton_proj.txt  a10_s10_e01_skeleton_proj.txt  a10_s10_e02_skeleton_proj.txt  a12_s07_e01_skeleton_proj.txt  a12_s07_e02_skeleton_proj.txt  a12_s08_e01_skeleton_proj.txt  a12_s08_e02_skeleton_proj.txt  a12_s09_e01_skeleton_proj.txt  a12_s09_e02_skeleton_proj.txt  a12_s10_e01_skeleton_proj.txt  a12_s10_e02_skeleton_proj.txt  a13_s07_e01_skeleton_proj.txt  a13_s07_e02_skeleton_proj.txt  a13_s08_e01_skeleton_proj.txt  a13_s08_e02_skeleton_proj.txt  a13_s09_e01_skeleton_proj.txt  a13_s09_e02_skeleton_proj.txt  a13_s10_e01_skeleton_proj.txt  a13_s10_e02_skeleton_proj.txt  a15_s07_e01_skeleton_proj.txt  a15_s07_e02_skeleton_proj.txt  a15_s08_e01_skeleton_proj.txt  a15_s08_e02_skeleton_proj.txt  a15_s09_e01_skeleton_proj.txt  a15_s09_e02_skeleton_proj.txt  a15_s10_e01_skeleton_proj.txt  a15_s10_e02_skeleton_proj.txt  (+8 more)
human_behavior_understanding/dataset/train/: a08_s01_e01_skeleton_proj.txt  a08_s01_e02_skeleton_proj.txt  a08_s02_e01_skeleton_proj.txt  a08_s02_e02_skeleton_proj.txt  a08_s03_e01_skeleton_proj.txt  a08_s03_e02_skeleton_proj.txt  a08_s04_e01_skeleton_proj.txt  a08_s04_e02_skeleton_proj.txt  a08_s05_e01_skeleton_proj.txt  a08_s05_e02_skeleton_proj.txt  a08_s06_e01_skeleton_proj.txt  a08_s06_e02_skeleton_proj.txt  a10_s01_e01_skeleton_proj.txt  a10_s01_e02_skeleton_proj.txt  a10_s02_e01_skeleton_proj.txt  a10_s02_e02_skeleton_proj.txt  a10_s03_e01_skeleton_proj.txt  a10_s03_e02_skeleton_proj.txt  a10_s04_e01_skeleton_proj.txt  a10_s04_e02_skeleton_proj.txt  a10_s05_e01_skeleton_proj.txt  a10_s05_e02_skeleton_proj.txt  a10_s06_e01_skeleton_proj.txt  a10_s06_e02_skeleton_proj.txt  a12_s01_e01_skeleton_proj.txt  (+47 more)
human_behavior_understanding/src/: HJPD.cpp  HOD.cpp  RAD.cpp  SVM_client.cpp  SVM_container.cpp  SVM_controller.cpp  SVM_server.cpp  histogram.cpp  histogram_client.cpp  svm.cpp  svm_predict.cpp  svm_scale.cpp  svm_train.cpp
(+15 files in other folders)
